# VizAPI

./: .env.template  .gitignore  Dockerfile  README.md  compose.yaml  mkdocs.yml  pyproject.toml  requirements.txt  vizapi.db
.github/workflows/: deploy-docs.yaml  docker-publish.yaml
app/: main.py  module.py
app/core/: config.py
app/core/auth/: api_auth.py  gh_data.json  repositories_auth.py  schemas_auth.py  services_auth.py
app/core/auth/api/: api.py
app/core/auth/repositories/: user_repo.py
app/core/auth/service/: github.py
app/core/security/: jwt.py
app/core/users/: api_users.py  dependencies.py  models_users.py  repositories_users.py  schemas_user.py
app/core/users/models/: __init__.py  user.py
app/core/users/schemas/: __init__.py  user.py
app/core/utils/: settings.py
app/modules/aquanote/: api_aquanote.py  repositories_file_aquanote.py  services_aquanote.py
app/modules/aquanote/api/: api.py
app/modules/aquanote/service/: local.py
app/modules/descript_sketches/: api_descript_sketches.py  repositories_file_descript_sketches.py  services_descript_sketches.py
app/modules/image_transform/: api_image_transform.py  repositories_image_transform.py  services_image_transform.py
app/modules/template/: api_template.py  models_template.py  repositories_db_template.py  repositories_file_template.py  schemas_template.py  service_template.py
app/shared/db/: database.py
app/types/: middleware.py  module.py
app/utils/dataroom/: upload.py
data/: vizapi.db
docs/: index.md
docs/architecture/: modules.md
docs/guides/: add-module.md  index.md
public/: editor.html
tests/core/: test_rate_limit.py
(+4 files in other folders)
