[project]
name = "VizAPI"
description = ""
version = "0.0.1"
readme = "README.md"

license = "MIT"

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py314"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

docstring-code-format = true

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is enabled.
docstring-code-line-length = "dynamic"
 
[tool.mypy]
python_version = "3.14"
plugins = ["pydantic.mypy"]

warn_unreachable = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
check_untyped_defs = true
disallow_subclassing_any = true
disallow_untyped_decorators = true
no_implicit_reexport = true
warn_return_any = true
explicit_package_bases = true
warn_no_return = true
strict = true

disallow_incomplete_defs = false
disallow_untyped_defs = false
disallow_any_generics = false
disallow_untyped_calls = false

[tool.pytest]
minversion = "9.0"
